--- a/styles/_mediaXS.scss
+++ b/styles/_mediaXS.scss
@@ -31,16 +31,6 @@
         font-size: 18px;
         margin-bottom: 0;
       }
-
-      .home-section__price-block {
-        width: 130px;
-        height: 23px;
-        margin-bottom: -5px;
-
-        .price-block_old-price {
-          font-size: 13px;
-        }
-      }
     }
   }
 
